# opengl-clion

./: CMakeLists.txt  main.cpp  readme.md
include/headers/: LoadShader.hpp  load_shader.hpp  project_preparation.h  project_preparation.hpp  project_reference.h
include/sources/: geo_shader.cpp  geoshader.cpp  main.cpp  simple_shader.cpp  simpleshader.cpp
shader/: shader_fragment.glsl  shader_geom.glsl  shader_vertex.glsl  simple_fragment.glsl  simple_geom.glsl  simple_vertex.glsl
